# blocktrace-app

./: Cargo.toml  README.md  dfx.json  package-lock.json
src/blocktrace-dapp-main-backend/: Cargo.toml  blocktrace-dapp-main-backend.did
src/blocktrace-dapp-main-backend/src/: lib.rs
src/blocktrace-frontend-main/: next.config.ts  package.json
src/blocktrace-frontend-main/app/: globals.css  page.tsx
src/blocktrace-frontend-main/app/add-step/: page.tsx
src/blocktrace-frontend-main/app/home/: page.tsx
src/blocktrace-frontend-main/app/passport/: page.tsx
src/blocktrace-frontend-main/app/track/: page.tsx
src/blocktrace-frontend-main/components/: LandingPage.tsx
src/blocktrace-frontend-main/hooks/: useICP.ts
src/blocktrace-frontend-main/lib/: icp-service.ts
